<resources>
    <string name="app_name">WorkClock</string>
    <string name="DialogSubminBtn">Подтвердить</string>
    <string name="DialogHeaderText">Введите номер к которому будет привязано данное устройство</string>
    <string name="DialogEnterHint">Номер устройства</string>
    <string name="instr">Для регистрации времени поднесите карту к считывателю.</string>
    <string name="timeReg">Время зафиксировано</string>
    <string name="timeUnReg">Ошибка чтения. Данный идентификатор не является идентификатором организации</string>
    <string name="hostname">ftp.simurg.by</string>
    <string name="username">timetracker@timetracker.simurg-mp.com</string>
    <string name="password">TimetrackerAdmin</string>
    <string name="alreadyScanned">Этот жетон уже отсканирован</string>
</resources>