<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="1346dp"
        android:layout_height="393dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="1336dp"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/DialogHeader"
                android:layout_width="538dp"
                android:layout_height="91dp"
                android:layout_marginTop="76dp"
                android:text="@string/DialogHeaderText"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.476"
                app:layout_constraintStart_toStartOf="parent"
                android:textSize="20sp"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/DialogEnterField"
                android:layout_width="373dp"
                android:layout_height="66dp"
                android:layout_marginTop="45dp"
                android:layout_marginBottom="32dp"
                android:ems="10"
                android:hint="@string/DialogEnterHint"
                android:inputType="numberDecimal"
                app:layout_constraintBottom_toTopOf="@+id/DialogSubmitBtn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.457"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/DialogHeader" />

            <Button
                android:id="@+id/DialogSubmitBtn"
                android:layout_width="473dp"
                android:layout_height="64dp"
                android:layout_marginBottom="60dp"
                android:text="@string/DialogSubminBtn"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.478"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>