<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/timeMain"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="132dp"
        android:layout_marginEnd="228dp"
        android:gravity="center"
        android:text="00:00:00"
        android:textColor="#FFFFFF"
        android:textSize="200sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_max="895dp" />

    <TextView
        android:id="@+id/dateMain"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="360dp"
        android:gravity="center"
        android:text="01.01.2024"
        android:textColor="#FFFFFF"
        android:textSize="100sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/timeMain"
        app:layout_constraintWidth_max="691dp" />

    <TextView
        android:id="@+id/instructor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="204dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/instr"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dateMain"
        app:layout_constraintWidth_max="968dp" />


    <TextView
        android:id="@+id/recordedTime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="488dp"
        android:gravity="center"
        android:textColor="#008000"
        android:textSize="70sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_max="459dp" />

    <TextView
        android:id="@+id/recordedDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="472dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:textColor="#008000"
        android:textSize="60sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recordedTime"
        app:layout_constraintVertical_bias="0.046"
        app:layout_constraintWidth_max="503dp" />

    <TextView
        android:id="@+id/textReg"
        android:layout_width="642dp"
        android:layout_height="221dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="324dp"
        android:gravity="center"
        android:text="@string/timeReg"
        android:textColor="#008000"
        android:textSize="70sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recordedDate"
        app:layout_constraintWidth_max="601dp" />

    <TextView
        android:id="@+id/textUnreg"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="228dp"
        android:layout_marginEnd="196dp"
        android:gravity="center"
        android:text="@string/timeUnReg"
        android:textColor="#FF0000"
        android:textSize="50sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_max="817dp" />

    <TextView
        android:id="@+id/code"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="284dp"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:text="@string/alreadyScanned"
        android:textColor="#FF0000"
        android:textSize="50sp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/timeMain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintWidth_max="803dp" />

    <EditText
        android:id="@+id/cardNumRFID"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:ems="10"
        android:inputType="number"
        android:background="@android:color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="1dp"
        android:layout_marginTop="-1dp" />

</androidx.constraintlayout.widget.ConstraintLayout>